--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URL="mongodb+srv://admin:2wJtmyTEdHUlZQFE@cluster0.livit.gcp.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+MONGO_URL="mongodb+srv://admin:<password>@cluster0.livit.gcp.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 MONGO_DB_NAME="test"
